# JNIStudy

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xaye/myjni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  other-lib.cpp  producer_consumer.cpp  second-lib.cpp  serial_port.cpp
app/src/main/java/com/xaye/myjni/: App.kt  Demo.java  FirstActivity.kt  JNI.java  JNI2.java  JNI3.java  MainActivity.kt  OtherActivity.kt
app/src/main/java/com/xaye/myjni/jni/: JNI.java  JNI2.java  JNI3.java  SerialPort.java  SignatureUtils.java
app/src/main/java/com/xaye/myjni/util/: HexUtil.kt
app/src/main/res/layout/: activity_first.xml  activity_main.xml  activity_other.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xaye/myjni/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
